@@ -263,8 +263,6 @@ application {
       "--add-opens", "javafx.controls/javafx.scene.control=ALL-UNNAMED",
       "--add-opens", "javafx.controls/javafx.scene.control.skin=ALL-UNNAMED",
       "--add-opens", "javafx.graphics/javafx.scene.image=ALL-UNNAMED",
-      "--add-opens", "javafx.graphics/javafx.stage=ALL-UNNAMED",
-      "--add-opens", "javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED",
       "--add-opens", "javafx.graphics/com.sun.prism=ALL-UNNAMED",
       "--illegal-access=permit"
    )
